--- a/prize.html
+++ b/prize.html
@@ -9,8 +9,8 @@
 <head>
     <title>Happy Birthday!</title>
 
-    <!-- include data -->
-    <script src="data/songs.txt"></script>
+    <!-- Select type of bingo -->
+    <script src="data/photos.txt" id="data-file"></script>
     <link rel="stylesheet" type="text/css" href="" id="insert-style">
     <script type="text/javascript">
         document.getElementById("insert-style").href = style_file;
