consolidated some files

--- a/bingo.html
+++ b/bingo.html
@@ -16,7 +16,6 @@
 
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="" id="insert-style">
-    <link rel="stylesheet" type="text/css" href="data/bingo.css">
 
     <!-- Select type of bingo -->
     <script src="data/photos.txt"></script>
@@ -337,7 +336,7 @@
         <input type="button" value="Refresh" onClick="generate();" />
     </form>
 
-    <div id="popupModal" class="modal">
+    <div id="popupModal" class="modal" style="display: none;">
         <span class="close" onclick="closeModal()">&times;</span>
         <img class="modal-content" id="modalImage">
     </div>
