--- a/prize.html
+++ b/prize.html
@@ -42,7 +42,7 @@
 
     <br><br>
 
-    <iframe id="google-image" src="" height="100%" frameBorder="0" style="display: none; margin:auto;"></iframe>
+    <iframe id="google-image" src="" height="538" width="957" frameBorder="0" style="display: none; margin:auto;"></iframe>
 
     <br><br>
 
