--- a/index.html
+++ b/index.html
@@ -5,16 +5,10 @@
 <head>
     <title>Birthday Bingo</title>
 
-    <!-- Select type of bingo -->
-    <script src="data/photos.txt" id="data-file"></script>
-    <link rel="stylesheet" type="text/css" href="" id="insert-style">
-    <script type="text/javascript">
-        document.getElementById("insert-style").href = style_file;
-    </script>
-
-    <!-- Front page images -->
-    <script src="data/front_page.txt"></script>
+    <!-- Front page images & css -->
+    <script src="data/index.txt"></script>
     <link rel="stylesheet" type="text/css" href="data/index.css">
+    <link rel="stylesheet" type="text/css" href="data/bingo.css">
 
     <!-- Font & Website logo -->
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet'>
