--- a/prize.html
+++ b/prize.html
@@ -9,14 +9,13 @@
 <head>
     <title>Happy Birthday!</title>
 
-    <!-- Select type of bingo -->
-    <script src="data/photos.txt" id="data-file"></script>
-    <link rel="stylesheet" type="text/css" href="" id="insert-style">
-    <script type="text/javascript">
-        document.getElementById("insert-style").href = style_file;
-    </script>
+    <!-- css -->
+    <link rel="stylesheet" type="text/css" href="data/bingo.css">
 
+    <!-- priza data  -->
     <script src="data/prize.txt"></script>
+
+    <!-- Font & Website logo -->
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=DM+Mono' rel='stylesheet'>
     <link rel="icon" href="https://img.icons8.com/flat_round/64/000000/whale--v1.png">
@@ -42,7 +41,7 @@
 
     <br><br>
 
-    <iframe id="google-image" src="" height="538" width="957" frameBorder="0" style="display: none; margin:auto;"></iframe>
+    <iframe id="google-image" src="" width="640" height="480" frameBorder="0" style="display: none; margin:auto;"></iframe>
 
     <br><br>
 
